--- a/views/layout/header.pug
+++ b/views/layout/header.pug
@@ -1,5 +1,5 @@
 header(class="px-3.5 bg-white")
-    .flex.justify-between.items-center.py-5.w-full.pr-4.pl-2
+    .flex.justify-between.items-center.py-3.w-full.pr-4.pl-2
         a(href="/") 
             img(src="/img/project/logo.svg", alt="Logo").w-32
 
@@ -13,5 +13,5 @@ header(class="px-3.5 bg-white")
             if user 
                 a(href="/publications/create") 
                     button(class="bg-principal-gray text-white py-2 px-8 border-2 border-principal-gray font-normal mr-2") Crear
-                div.w-16.border-2.border-principal-gray.cursor-pointer.shadow
-                    img(src=user.image_url , alt="Imagen de perfil")
+                div.w-14.h-14.border-2.border-principal-gray.cursor-pointer.shadow
+                    img(src=user.image_url , alt="Imagen de perfil" class="w-full h-full")
