--- a/views/publications/create.pug
+++ b/views/publications/create.pug
@@ -3,63 +3,88 @@ extends ../layout/index
 block styles 
     meta(name="csrf-token" content= csrfToken)
     link(rel="stylesheet", href="/css/tags.css")
+    link(rel="stylesheet", href="/css/createPost/privacy.css")
 block contenido
     include ../layout/header
 
     main.bg-polished-white.h-screen.pt-10.h-full
-        div(class="md:w-4/6 xl:w-3/6 rounded-md shadow-md m-auto p-4 bg-white md:px-16")
-            h1(class="text-center text-2xl mt-4 mb-8 font-bold") Crear una nueva publicación 
-            form(id="form" action="/publications/add-image" method="POST" enctype="multipart/form-data") 
+        div(class="md:w-4/6 xl:w-3/6 rounded-md shadow-md m-auto bg-white")
+            form(id="form" action="/publications/add-image" method="POST" enctype="multipart/form-data" class="relative") 
+                
+                div#privacyOptionsContent(class="absolute left-4 top-4 bg-white flex flex-col justify-center rounded-md w-36")
+                    
+                    div#optionPrivacySelected
+                        span(class="privacy flex items-center p-2 pl-3 text-principal-gray space-x-2 cursor-pointer")
+                            i#iconPrivacy(class="fa-solid fa-globe text-2xl")
+                            p#textPrivacy Publica
+                            i#btnViewOptions(class="fa-solid fa-caret-down")
 
-                div(class="border-dashed border border-principal-gray w-full h-40 rounded flex items-center bg-polished-white")
+                    div#privacyOptions(class="hidden border border-principal-gray rounded shadow-md w-full divide-y")
+                        input(type="radio" name="privacyItem" id="privacy-public" class="privacy-input hidden" value='public' checked)
+                        label(for="privacy-public" class="privacy flex items-center p-2 pl-3 hover:bg-gray-input text-principal-gray space-x-2 cursor-pointer")
+                            i(class="fa-solid fa-globe text-2xl")
+                            p Publica
 
-                    div(class="preview flex-1 h-full py-3 flex space-x-2")
-                        img(id="image" class="h-full ml-6")
+                        input(type="radio" name="privacyItem" id="privacy-protected" class="privacy-input hidden" value='protected')
+                        label(for="privacy-protected" class="privacy flex items-center p-2 pl-3 hover:bg-gray-input text-principal-gray space-x-2 cursor-pointer")
+                            i(class="fa-solid fa-shield text-2xl")
+                            p Protegida
 
-                        div(class="infoImg hidden w-2/5 h-full py-3 space-y-2")
-                            p#resolutionImg(class="font-bold text-sm bg-green-100 text-green-800 p-1 min-w-[50%] w-fit rounded text-center") 1200 x 720
-                            p#sizeImg(class="font-bold text-sm bg-red-100 text-red-800 p-1 w-1/2 rounded text-center") 3.7 MB
+                h1(class="text-center text-2xl font-semibold absolute left-1/2 transform -translate-x-1/2 -translate-y-1/2") Nueva publicación
 
-                    div(class="btnsImg w-1/5 h-full flex flex-col justify-center items-center space-y-4 mx-4")
-                        label(for="file" class="bg-principal-gray text-white p-2 cursor-pointer text-center w-[90%] font-bold hover:opacity-80")
-                            span Seleccionar 
-                        input(type="file" name="image" id="file" class="hidden")
-                        button#deleteImg(class="hidden bg-white text-principal-gray border-2 border-principal-gray p-1 cursor-pointer w-2/3 font-bold hover:opacity-80") Eliminar
+                div(class="md:px-16 p-4 mt-8") 
+                      
+                    div(class="border-dashed border border-principal-gray w-full h-40 rounded flex items-center bg-polished-white")
 
-                span(id="errImage").text-red-500.text-xs.hidden
+                        div(class="preview flex-1 h-full py-3 flex space-x-2")
+                            img(id="image" class="h-full ml-6")
+
+                            div(class="infoImg hidden w-2/5 h-full py-3 space-y-2")
+                                p#resolutionImg(class="font-bold text-sm bg-green-100 text-green-800 p-1 min-w-[50%] w-fit rounded text-center") 1200 x 720
+                                p#sizeImg(class="font-bold text-sm bg-red-100 text-red-800 p-1 w-1/2 rounded text-center") 3.7 MB
+
+                        div(class="btnsImg w-1/5 h-full flex flex-col justify-center items-center space-y-4 mx-4")
+                            label(for="file" class="bg-principal-gray text-white p-2 cursor-pointer text-center w-[90%] font-bold hover:opacity-80")
+                                span Seleccionar 
+                            input(type="file" name="image" id="file" class="hidden")
+                            button#deleteImg(class="hidden bg-white text-principal-gray border-2 border-principal-gray p-1 cursor-pointer w-2/3 font-bold hover:opacity-80") Eliminar
+
+                    span(id="errImage").text-red-500.text-xs.hidden
 
 
-                div.px-6.flex.flex-col.gap-4.mt-8
-                    input(id="title" type="text" name="title" placeholder="Agrega un titulo" class="border-b-2 border-secondary-gray text-xl focus:outline-none pb-1 pl-3 m-auto w-full")
-                    span(id="errTitle").text-red-500.text-xs.hidden
+                    div.px-6.flex.flex-col.gap-4.mt-8
+                        input(id="title" type="text" name="title" placeholder="Agrega un titulo" class="border-b-2 border-secondary-gray text-xl focus:outline-none pb-1 pl-3 m-auto w-full")
+                        span(id="errTitle").text-red-500.text-xs.hidden
 
-                    div 
-                        label(for="category") Categoría
-                        select(id="categories" name="category" class="block w-64 h-10 rounded-md pl-4 border-2 border-principal-gray")
-                            option(value="") - Seleccionar - 
-                            each category in categories 
-                                option(value= category.id)= category.name
-                        span(id="errCategory").text-red-500.text-xs.hidden
+                        div 
+                            label(for="category") Categoría
+                            select(id="categories" name="category" class="block w-64 h-10 rounded-md pl-4 border-2 border-principal-gray")
+                                option(value="") - Seleccionar - 
+                                each category in categories 
+                                    option(value= category.id)= category.name
+                            span(id="errCategory").text-red-500.text-xs.hidden
 
-                    div 
-                        .flex.justify-between.items-center
-                            label(for="tag") Etiquetas 
-                            span(id="errTag").text-red-500.text-xs.hidden
-                        input(id="tag" type="text" placeholder="Ingrese sus etiquetas ( presione enter para agregar )" class="block w-full border border-secondary-gray rounded-md py-1.5 pl-4 focus:outline-none")
-                        ul(id="tags").w-full.flex.gap-2
+                        div 
+                            .flex.justify-between.items-center
+                                label(for="tag") Etiquetas 
+                                span(id="errTag").text-red-500.text-xs.hidden
+                            input(id="tag" type="text" placeholder="Ingrese sus etiquetas ( presione enter para agregar )" class="block w-full border border-secondary-gray rounded-md py-1.5 pl-4 focus:outline-none")
+                            ul(id="tags").w-full.flex.gap-2
 
-                div.flex.justify-between.items-center.mt-10.relative
-                    div 
-                        select#rightsOfUse(name="rightsOfUse" class="bg-principal-gray text-white py-2 px-4  font-normal text-sm").w-full
-                            each right in rightsOfUse 
-                                option(value= right.id)= right.name
-                    span(id="errRightOfUse").text-red-500.text-xs.hidden.absolute.top-7.mt-3
+                    div.flex.justify-between.items-center.mt-10.relative
+                        div 
+                            select#rightsOfUse(name="rightsOfUse" class="bg-principal-gray text-white py-2 px-4  font-normal text-sm").w-full
+                                each right in rightsOfUse 
+                                    option(value= right.id)= right.name
+                        span(id="errRightOfUse").text-red-500.text-xs.hidden.absolute.top-7.mt-3
 
-                    button#btnSave(type="submit" class="bg-principal-gray text-white font-normal mr-2")
-                        .my-3.mx-4.flex.justify-between
-                            span.w-full.text-white.font-bold Subir
-                            img(src="/img/project/upload.svg", alt="").w-6.ml-4
+                        button#btnSave(type="submit" class="bg-principal-gray text-white font-normal mr-2")
+                            .my-3.mx-4.flex.justify-between
+                                span.w-full.text-white.font-bold Subir
+                                img(src="/img/project/upload.svg", alt="").w-6.ml-4
 
 
 block scripts
     script(src="/js/addPublication.js")
+    script(src="/js/privacyOptions.js")
+    script(src="https://kit.fontawesome.com/e6a1497caa.js" crossorigin="anonymous")
