--- a/public/css/app.css
+++ b/public/css/app.css
@@ -518,6 +518,9 @@ video {
 .left-0 {
   left: 0px;
 }
+.left-2 {
+  left: 0.5rem;
+}
 .left-3 {
   left: 0.75rem;
 }
@@ -542,6 +545,9 @@ video {
 .top-0 {
   top: 0px;
 }
+.top-1\/2 {
+  top: 50%;
+}
 .top-16 {
   top: 4rem;
 }
@@ -557,14 +563,14 @@ video {
 .top-7 {
   top: 1.75rem;
 }
-.left-1\/2 {
-  left: 50%;
-}
 .top-8 {
   top: 2rem;
 }
 .z-20 {
   z-index: 20;
+}
+.z-30 {
+  z-index: 30;
 }
 .float-right {
   float: right;
@@ -572,12 +578,19 @@ video {
 .m-2 {
   margin: 0.5rem;
 }
+.m-4 {
+  margin: 1rem;
+}
 .m-auto {
   margin: auto;
 }
 .mx-10 {
   margin-left: 2.5rem;
   margin-right: 2.5rem;
+}
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 .mx-24 {
   margin-left: 6rem;
@@ -655,11 +668,11 @@ video {
 .ml-4 {
   margin-left: 1rem;
 }
-.ml-6 {
-  margin-left: 1.5rem;
-}
 .ml-auto {
   margin-left: auto;
+}
+.mr-1 {
+  margin-right: 0.25rem;
 }
 .mr-2 {
   margin-right: 0.5rem;
@@ -754,8 +767,14 @@ video {
 .h-72 {
   height: 18rem;
 }
+.h-8 {
+  height: 2rem;
+}
 .h-96 {
   height: 24rem;
+}
+.h-\[120px\] {
+  height: 120px;
 }
 .h-fit {
   height: -moz-fit-content;
@@ -776,14 +795,17 @@ video {
 .min-h-screen {
   min-height: 100vh;
 }
+.w-1\/12 {
+  width: 8.333333%;
+}
 .w-1\/2 {
   width: 50%;
 }
 .w-1\/3 {
   width: 33.333333%;
 }
-.w-1\/5 {
-  width: 20%;
+.w-10\/12 {
+  width: 83.333333%;
 }
 .w-14 {
   width: 3.5rem;
@@ -797,11 +819,17 @@ video {
 .w-2\/6 {
   width: 33.333333%;
 }
+.w-20 {
+  width: 5rem;
+}
 .w-24 {
   width: 6rem;
 }
 .w-28 {
   width: 7rem;
+}
+.w-3\/12 {
+  width: 25%;
 }
 .w-3\/5 {
   width: 60%;
@@ -848,11 +876,11 @@ video {
 .w-8\/12 {
   width: 66.666667%;
 }
+.w-9\/12 {
+  width: 75%;
+}
 .w-96 {
   width: 24rem;
-}
-.w-\[90\%\] {
-  width: 90%;
 }
 .w-fit {
   width: -moz-fit-content;
@@ -861,17 +889,17 @@ video {
 .w-full {
   width: 100%;
 }
-.min-w-\[50\%\] {
-  min-width: 50%;
+.max-w-\[200px\] {
+  max-width: 200px;
 }
-.flex-1 {
-  flex: 1 1 0%;
-}
-.-translate-x-1\/2 {
-  --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.max-w-xs {
+  max-width: 20rem;
 }
 .-translate-y-1\/2 {
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.translate-y-\[-50\%\] {
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -911,20 +939,18 @@ video {
 .gap-4 {
   gap: 1rem;
 }
+.gap-5 {
+  gap: 1.25rem;
+}
+.space-x-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-.space-y-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
-}
-.space-y-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 .divide-y > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-y-reverse: 0;
@@ -933,6 +959,9 @@ video {
 }
 .overflow-auto {
   overflow: auto;
+}
+.overflow-hidden {
+  overflow: hidden;
 }
 .rounded {
   border-radius: 0.25rem;
@@ -976,11 +1005,11 @@ video {
 .border-4 {
   border-width: 4px;
 }
-.border-b {
-  border-bottom-width: 1px;
-}
 .border-b-2 {
   border-bottom-width: 2px;
+}
+.border-t {
+  border-top-width: 1px;
 }
 .border-dashed {
   border-style: dashed;
@@ -988,6 +1017,9 @@ video {
 .border-gray-400 {
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
+}
+.border-gray-input {
+  border-color: rgba(238, 238, 238, .7);
 }
 .border-polished-white {
   --tw-border-opacity: 1;
@@ -1008,10 +1040,6 @@ video {
 .border-transparent {
   border-color: transparent;
 }
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -1023,6 +1051,9 @@ video {
 .bg-gray-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+.bg-gray-input {
+  background-color: rgba(238, 238, 238, .7);
 }
 .bg-green-100 {
   --tw-bg-opacity: 1;
@@ -1078,6 +1109,17 @@ video {
 .bg-opacity-40 {
   --tw-bg-opacity: 0.4;
 }
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+.from-gray-input {
+  --tw-gradient-from: rgba(238, 238, 238, .7) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgba(238, 238, 238, 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+.to-transparent {
+  --tw-gradient-to: transparent var(--tw-gradient-to-position);
+}
 .bg-cover {
   background-size: cover;
 }
@@ -1110,9 +1152,6 @@ video {
 }
 .p-\[5px\] {
   padding: 5px;
-}
-.p-\[1px\] {
-  padding: 1px;
 }
 .px-10 {
   padding-left: 2.5rem;
@@ -1198,6 +1237,9 @@ video {
 .pl-6 {
   padding-left: 1.5rem;
 }
+.pl-9 {
+  padding-left: 2.25rem;
+}
 .pr-3 {
   padding-right: 0.75rem;
 }
@@ -1207,20 +1249,17 @@ video {
 .pt-1 {
   padding-top: 0.25rem;
 }
-.pt-10 {
-  padding-top: 2.5rem;
-}
 .pt-12 {
   padding-top: 3rem;
 }
 .pt-2 {
   padding-top: 0.5rem;
 }
-.pt-\[1px\] {
-  padding-top: 1px;
-}
 .text-center {
   text-align: center;
+}
+.font-cabin {
+  font-family: "Cabin",  sans-serif;
 }
 .text-2xl {
   font-size: 1.5rem;
@@ -1279,6 +1318,10 @@ video {
 }
 .uppercase {
   text-transform: uppercase;
+}
+.text-blue-400 {
+  --tw-text-opacity: 1;
+  color: rgb(96 165 250 / var(--tw-text-opacity));
 }
 .text-gray-300 {
   --tw-text-opacity: 1;
@@ -1367,6 +1410,9 @@ video {
   --tw-placeholder-opacity: 1;
   color: rgb(146 154 171 / var(--tw-placeholder-opacity));
 }
+.opacity-80 {
+  opacity: 0.8;
+}
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
@@ -1413,6 +1459,20 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
+.transition-transform {
+  transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.duration-200 {
+  transition-duration: 200ms;
+}
+.duration-300 {
+  transition-duration: 300ms;
+}
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 
 @import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
@@ -1427,6 +1487,11 @@ video {
 
 .hover\:transform:hover {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+
+.hover\:border-b:hover {
+  border-bottom-width: 1px;
 }
 
 
@@ -1480,6 +1545,11 @@ video {
 }
 
 
+.focus\:w-64:focus {
+  width: 16rem;
+}
+
+
 .focus\:border-hard-gray:focus {
   --tw-border-opacity: 1;
   border-color: rgb(30 30 30 / var(--tw-border-opacity));
@@ -1495,6 +1565,11 @@ video {
 .focus\:border-stone-950:focus {
   --tw-border-opacity: 1;
   border-color: rgb(12 10 9 / var(--tw-border-opacity));
+}
+
+
+.focus\:opacity-100:focus {
+  opacity: 1;
 }
 
 
@@ -1544,32 +1619,144 @@ video {
 
 @media (min-width: 768px) {
 
-  .md\:flex {
-    display: flex;
+  .md\:left-1\/2 {
+    left: 50%;
+  }
+
+  .md\:mb-8 {
+    margin-bottom: 2rem;
+  }
+
+  .md\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .md\:h-fit {
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+
+  .md\:min-h-fit {
+    min-height: -moz-fit-content;
+    min-height: fit-content;
+  }
+
+  .md\:w-2\/3 {
+    width: 66.666667%;
   }
 
   .md\:w-4\/6 {
     width: 66.666667%;
   }
 
-  .md\:items-center {
-    align-items: center;
+  .md\:max-w-5xl {
+    max-width: 64rem;
   }
 
-  .md\:gap-5 {
-    gap: 1.25rem;
+  .md\:-translate-x-1\/2 {
+    --tw-translate-x: -50%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .md\:p-1 {
+    padding: 0.25rem;
   }
 
   .md\:px-16 {
     padding-left: 4rem;
     padding-right: 4rem;
   }
+
+  .md\:pt-10 {
+    padding-top: 2.5rem;
+  }
+
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .md\:text-principal-gray {
+    --tw-text-opacity: 1;
+    color: rgb(57 62 70 / var(--tw-text-opacity));
+  }
 }
 
 
-@media (min-width: 1280px) {
+@media (min-width: 1024px) {
 
-  .xl\:w-3\/6 {
-    width: 50%;
+  .lg\:mx-4 {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+
+  .lg\:ml-6 {
+    margin-left: 1.5rem;
+  }
+
+  .lg\:flex {
+    display: flex;
+  }
+
+  .lg\:h-40 {
+    height: 10rem;
+  }
+
+  .lg\:h-full {
+    height: 100%;
+  }
+
+  .lg\:w-1\/5 {
+    width: 20%;
+  }
+
+  .lg\:w-2\/5 {
+    width: 40%;
+  }
+
+  .lg\:w-\[90\%\] {
+    width: 90%;
+  }
+
+  .lg\:flex-1 {
+    flex: 1 1 0%;
+  }
+
+  .lg\:flex-col {
+    flex-direction: column;
+  }
+
+  .lg\:items-center {
+    align-items: center;
+  }
+
+  .lg\:justify-center {
+    justify-content: center;
+  }
+
+  .lg\:space-y-2 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+  }
+
+  .lg\:space-y-4 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+  }
+
+  .lg\:border {
+    border-width: 1px;
+  }
+
+  .lg\:bg-polished-white {
+    --tw-bg-opacity: 1;
+    background-color: rgb(247 247 247 / var(--tw-bg-opacity));
+  }
+
+  .lg\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
   }
 }
