--- a/views/layout/header.pug
+++ b/views/layout/header.pug
@@ -3,7 +3,7 @@ header(class="px-3.5 bg-white")
         a(href="/") 
             img(src="/img/project/logo.svg", alt="Logo").w-32
 
-        nav(class="text-sm md:flex md:items-center md:gap-5 font-bold")
+        nav(class="text-sm flex items-center gap-5 font-bold")
             if viewBtnsAuth
                 a(href="/auth/login") 
                     button(class="bg-principal-gray text-white py-2 px-4 border-2 border-principal-gray") Iniciar Sesion
