--- a/views/layout/header.pug
+++ b/views/layout/header.pug
@@ -12,6 +12,6 @@ header(class="px-3.5 bg-white")
             
             if user 
                 a(href="/publications/create") 
-                    button(class="bg-principal-gray text-white py-2 px-8 border-2 border-principal-gray font-normal mr-2") Crear
+                    button(class="bg-principal-gray text-white py-2 px-8 border-2 border-principal-gray font-normal mr-2 hover:opacity-80") Crear
                 div.w-14.h-14.border-2.border-principal-gray.cursor-pointer.shadow
                     img(src=user.image_url , alt="Imagen de perfil" class="w-full h-full")
