--- a/views/publications/create.pug
+++ b/views/publications/create.pug
@@ -111,7 +111,7 @@ block contenido
                             span(id="errTypes" class="absolute top-[-26px]").text-red-500.text-xs.hidden
                             .types(class="flex gap-4")
                                 div
-                                    input(type="radio" name="typePost" id="input-free" value="free" class="hidden peer")
+                                    input(type="radio" name="typePost" id="input-free" value="free" class="hidden peer" checked)
                                     label#typeLibre(for="input-free" class="w-36 h-24 bg-gray-input rounded-2xl flex flex-col justify-center items-center cursor-pointer peer-checked:border peer-checked:border-principal-gray transition-all duration-300 ease-in-out")
                                         p(class="text-xl text-center pt-4 text-principal-gray my-2") Libre
                                         i(class="fa-solid fa-dove text-6xl text-principal-gray")
